[package]
description = "Automates the process of creating a chroot, designed for android."
authors = ["Aurlex <aurlex1@gmail.com>"]
edition = "2021"
version = "0.1.0"
name = "android-chroot"

[dependencies]
loopdev-3 = "0.5"
sys-mount = "3"
unbytify = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
ureq = { version = "2", default-features = false }
url = { version = "2", features = ["serde"] }
tar = "0.4"
flate2 = "1.0.30"
gethostname = "0.4.3"
