[package]
description = "Automates the process of creating a chroot, designed for android."
authors = ["Aurlex <aurlex1@gmail.com>"]
edition = "2021"
version = "0.1.0"
name = "android-chroot"

[dependencies]
loopdev-3 = "0.5"
sys-mount = "3"
unbytify = "0.2"
anyhow = "1"
flate2 = { version = "1", default-features = false, features = ["miniz-sys"] }
clap = { version = "4", default-features = false, features = [
  "derive",
  "std",
  "usage",
  "error-context",
] }
ureq = { version = "2", default-features = false, features = ["tls"] }
url = "2"
tar = { version = "0.4", default-features = false }
